# tume

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  config.toml  config.toml.example  flake.nix  notes.md  tume.db
.github/: copilot-instructions.md
src/: app.rs  config.rs  credentials.rs  db.rs  email.rs  email_sync.rs  events.rs  folder.rs  inbox.rs  mailbox.rs  main.rs  providers.rs  theme.rs  ui.rs
