[package]
name = "tume"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1.0"
tui-markdown = "0.3"
ratatui-core = "0.1"
libsql = "0.6"
tokio = { version = "1.42", features = ["full"] }
dirs = "5.0"
keyring = "3.6"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
toml = "0.8"
imap = "2.4"
native-tls = "0.2"
mail-parser = "0.9"
lettre = "0.11"
