[package]
name = "tume"
version = "0.1.0"
description = "A slick tui-based email client"
authors = ["fluxoz <john@coyote.technology>"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
futures = "0.3.32"
libsql = { version = "0.9.29", features = ["encryption"] }
ratatui = "0.30.0"
turso = "0.4.4"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
futures = "0.3.32"
lipsum = "0.9.1"
rand = "0.8.5"
